fixed layout issue in create-post

--- a/Src/CSS/createPost.css
+++ b/Src/CSS/createPost.css
@@ -22,7 +22,7 @@ body{
     margin-right: auto;
     padding-top: 1em;
     padding-bottom: 1em;
-    height: 100vh;
+
 }
 h2{
     margin-left: 1em;
